# longitudinal_arm_swing

./: .env_sample.txt  README.md  data_preparation.py  pyproject.toml
notebooks/: 1.descriptives.ipynb  2.l1tf_results.ipynb
src/longitudinal_arm_swing/: constants.py  util.py
